[B]Retrospect v5.0.0.0~alpha7 - Changelog - 2019-06-06[/B]

[B]Framework related[/B]
* Py2/3: updated code to be compatible with both Python 2 and Python 3
* Py2/3: use `backtothefuture` module to be 100% Python 3 compatible and keep performance high
* Fixed: some code cleanup
* Updated: disclaimer in addon.xml
* Changed: moved the settings_template.xml to the /resources/data/ folder (See https://kodi.wiki/view/Add-on_structure)
* Reverted: Partly reverted ad38d22f because it caused sync issues with subs if the InputStream Adaptive is used.
* Updated: allow to specify an initial bitrate for HLS streams
* Updated: use ListItem.setSubtitles for subtitle (See #1154)

[B]GUI/Settings/Language related[/B]
* Changed: removed the "experimental" warning from the HTTP Caching settings
* Updated: readme.md
* Fixed: error with None check and xbmc.PlayList

[B]Channel related[/B]
* Fixed: BBC did not work at all

