@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon  id="plugin.video.retrospect"
-        version="5.0.0.0~alpha7"
+        version="5.0.0.0~alpha8"
         name="Retrospect"
         provider-name="Bas Rieter">
 
@@ -122,7 +122,7 @@
         <description lang="en">Retrospect uses the official websites of a lot of different broadcasting companies (mainly Dutch, Belgian, British and Swedish) to make their re-run episodes available on the Kodi platform. More information can be found at www.rieter.net.[CR][CR]Retrospect reports back usage statistics to our servers. This option can be disabled from the add-on settings.</description>
         <disclaimer lang="en">Retrospect is provided as is. We do not take any responsibility for possible (but highly unlikely) damage caused to your system. Nor do we take responsibility for the content that can be watched via this add-on or any consequences of using this add-on to watch the content using the content provider's platforms.</disclaimer>
         <language>en nl de se no lt lv fi</language>
-        <news>[B]Retrospect v5.0.0.0~alpha7 - Changelog - 2019-06-06[/B]
+        <news>[B]Retrospect v5.0.0.0~alpha8 - Changelog - 2019-06-12[/B]
 
 [B]Framework related[/B]
 * Py2/3: updated code to be compatible with both Python 2 and Python 3
@@ -133,15 +133,23 @@
 * Reverted: Partly reverted ad38d22f because it caused sync issues with subs if the InputStream Adaptive is used.
 * Updated: allow to specify an initial bitrate for HLS streams
 * Updated: use ListItem.setSubtitles for subtitle (See #1154)
+* Changed: a bit of performance tuning that makes use of the `reuselanguageinvoker` feature of Kodi
+* Changed: some in code `import` statements that improve performance
+* Added: make the InputStream Adaptive configurable for certain channels
+* Fixed: Refresh list after changing the InputStream Adaptive settings to get rid of previous urls
 
 [B]GUI/Settings/Language related[/B]
 * Changed: removed the &quot;experimental&quot; warning from the HTTP Caching settings
 * Updated: readme.md
 * Fixed: error with None check and xbmc.PlayList
+* Updated: context menu restructured a bit
 
 [B]Channel related[/B]
 * Fixed: BBC did not work at all
-
+* Added: more Premium channel for Stievie (See #1030)
+* Added: Duration and Expire Date to SVT
+* Updated: AT5 and the ViaFree channels to select to use InputStream Adaptive or not
+* Updated: SVT can now select to use InputStream adaptive or not
 
 
         </news>
